# anima

./: .env.example  .gitignore  ANIMA.bat  LICENSE  MANIFEST.in  README.md  README_ZH.md  _list_files.py  _scan_syntax.py  check_mem.py  create_shortcut.bat  launcher.py  pyproject.toml  requirements.txt  setup.py  start_eva.bat  start_eva.vbs  test_config.py  test_out.txt  tmp_evo_submit.py  tmp_evo_test.py  tmp_jm_dl.py  tmp_jm_download.py  tmp_jm_result.txt  tmp_jm_result2.txt  tmp_jm_search_full.txt  tmp_jm_test.py  tmp_jm_test2.py  tmp_pack.py  tmp_pack_result.txt
.claude/: settings.local.json
.github/workflows/: cd-deploy.yml  ci.yml
agents/_seed/: README.md  config.yaml  manifest.yaml  soul.md
agents/eva/: feelings.md  manifest.yaml  soul.md
anima/: __init__.py  __main__.py  bootstrap.py  config.py  main.py  secret_store.py  startup_check.py  watchdog.py
anima/api/: __init__.py  auth.py  chat.py  context.py  evolution.py  health.py  memory.py  network.py  responses.py  robotics.py  router.py  settings.py  soulscape.py  status.py
anima/channels/: base.py  discord_channel.py  telegram_channel.py  webhook_channel.py
anima/core/: agents.py  axis_prompts.py  boot_health.py  checkpoint.py  cognitive.py  content_safety.py  context.py  conversation.py  event_queue.py  event_router.py  event_routing.py  evolution.py  governance.py  heartbeat.py  idle_scheduler.py  issue_tracker.py  pipeline.py  protocols.py  reload.py  response_handler.py  rule_engine.py  scheduler.py  self_audit.py  session_manager.py  singleton.py  stages.py  tool_orchestrator.py  tool_selector.py
anima/dashboard/: hub.py  page.py  server.py
anima/desktop/: __init__.py  app.py  singleton.py
anima/emotion/: embodied.py  feedback.py  perception.py  state.py
anima/evolution/: __init__.py  agent_pool.py  consensus.py  deployer.py  engine.py  (+3 more)
config/: default.yaml  tool_selection.yaml
data/: dev_history.md  env_catalog.json  evolution_memory.yaml  evolution_state.json  node.json  projects.md  scheduler.json  sync_watermarks.json  todo_reminder_state.json  user_profile.md.20260317_072113.bak  user_profile.md.20260317_072126.bak  user_profile.md.20260317_080756.bak  user_profile.md.20260317_081104.bak  user_profile.md.20260320_234829.bak  user_profile.md.example  watchdog_heartbeat.json
docs/: API.md  ARCHITECTURE.md  AZURE_DEPLOY.md  CODE_REVIEW_2026-06.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  DISTRIBUTED_DESIGN.md  EDGE_ANIMA.md  EVA_MAINTENANCE.md  EVOLUTION_SAFETY_DESIGN.md  FINAL_COMPLETION_REPORT.md  FRONTEND_REDESIGN.md  PHASE3_TIERED_MEMORY_BLUEPRINT.md  REFACTOR.md  ROBOTICS_PIDOG.md  SENTINEL_DESIGN.md  SOUL_REDESIGN.md  deep_analysis_v3.md  desktop_redesign_plan.md  idle_scheduler_design.md  phase1_distributed_network.md  phase1_status.md  sprint1_completion.md  sprint2_completion.md  sprint3_completion.md  sprint4_completion.md  sprint5_completion.md  sprint6_completion.md  sprint7_completion.md  sprint8_completion.md  sprint9_completion.md
eva-desktop/: package-lock.json  package.json
eva-desktop/src-tauri/: Cargo.toml  tauri.conf.json
eva-desktop/src-tauri/capabilities/: default.json
eva-desktop/src-tauri/icons/: README.md
eva-desktop/src-tauri/src/: main.rs
eva-ui/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
local/: env.yaml.example
portal/: index.html
prompts/: decide.md  reflect.md  system_identity.md
scripts/: migrate_soul_to_postgres.py
tests/: _test_sftp.py  conftest.py  pgutil.py  stress_test.py  test_cognitive.py  test_dashboard.py  test_deepseek_routing.py  test_diff_engine.py  test_distributed_p0.py  test_document_store.py  test_edge_runtime.py  test_env_scanner.py  test_event_queue.py  test_evolution_safety.py  test_full_system.py  test_gossip_dedupe_ttl.py  test_gossip_protocol.py  test_governance_status.py  test_guardian.py  test_heartbeat.py  test_heartbeat_integration.py  test_idle_scheduler.py  test_integration_network.py  test_integration_pipeline.py  test_llm_router.py  test_memory.py  test_mesh_authz.py  test_network.py  test_network_api.py  test_oauth_live.py  test_p0_fixes.py  test_pg_backend.py  test_pg_store.py  test_pg_sync.py  test_robotics.py  test_s1_conversation_persistence.py  test_s2_emotion.py  test_s4_cognition.py  test_s4_tone.py  test_safety.py  (+21 more)
tools/: export_soulpack.py  vrm_check.py  vrm_lab.py  vrm_viewer.py
(+297 files in other folders)
