[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anima"
version = "0.2.0"
description = "Heartbeat-driven, distributed, self-evolving AI life system"
requires-python = ">=3.11"
dependencies = [
    # Slim core: LLM + cognitive + memory + the API/WebSocket server. Optional
    # subsystems (network mesh, desktop window, voice, discord) live in extras below.
    "litellm>=1.40.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9",
    # Memory backend: Postgres + pgvector (Neon cloud primary / local failover).
    # Embeddings via OpenAI (httpx, above). This is the ONLY memory backend.
    "psycopg[binary]>=3.2",
    "pgvector>=0.4",
]

[project.optional-dependencies]
tts = [
    "qwen_tts",
    "torch",
    "torchaudio",
    "soundfile",
    "librosa",
    "transformers==4.57.3",
    "accelerate",
    "einops",
]
stt = ["faster-whisper"]
watch = ["watchdog>=4.0.0"]
discord = ["discord.py>=2.3"]
# Distributed gossip mesh (zmq) + mDNS discovery + remote-node SSH deploy/spawn.
network = ["pyzmq>=25.0", "msgpack>=1.0", "zeroconf>=0.131", "paramiko>=3.5.0"]
# Everything — a full single-machine install.
all = ["anima[network,tts,stt,discord,watch]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "bandit>=1.7.0",
    "ruff>=0.5.0",
]

[project.scripts]
anima = "anima.main:main_entry"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["anima*"]

# Read-only assets mirrored into anima/_resources/ at build time (see setup.py)
# so an installed kernel (no source tree) can still resolve config/prompts/skills.
[tool.setuptools.package-data]
anima = ["_resources/**/*"]
